# fastapi-ml-template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/api/: dependencies.py  schemas.py
src/api/middleware/: __init__.py  metrics.py  rate_limit.py  request_id.py
src/api/routes/: __init__.py  health.py  model.py  predict.py
src/core/: config.py  logging.py  metrics.py
src/models/: __init__.py  base.py  hf_model.py  registry.py  sklearn_model.py
tests/: conftest.py  test_config.py  test_health.py  test_middleware.py  test_model.py  test_models.py  test_predict.py
